# NURa

./: Coefficients_output.txt  Execution_times.txt  Poisson_output.txt  README.md  Vandermonde.txt  pyproject.toml  quiz.py
Sorting animations.html/: Sorting animations.html
handins/: reminder_for_running_on_own_laptop.txt
handins/Silvan_Toet_handinA1/: Execution_times.txt  NURA_handin_1.fdb_latexmk  NURA_handin_1.fls  NURA_handin_1.tex
handins/Silvan_Toet_handinA1/__MACOSX/: ._Q1_solution.py
handins/Template_handinA1/: Execution_times.txt  NURA_handin_1.aux  NURA_handin_1.fdb_latexmk  NURA_handin_1.fls  NURA_handin_1.out  NURA_handin_1.tex  Poisson_output.txt  Q1_solution.py  Q2_solution.py
handins/Template_handinA1/Code/: Poisson_code.txt  Vandermonde_all_code.txt
handins/Template_handinA1/__MACOSX/: ._NURA_handin_1.tex  ._Q2_solution.py
handins/handin1/Silvan_Toet_handinA1/: NURA_handin_1.fdb_latexmk  NURA_handin_1.fls  Q2_solution.py
handins/handin2/Silvan_Toet_handinA2/: NURA_handin_2.aux  NURA_handin_2.fdb_latexmk  NURA_handin_2.fls  NURA_handin_2.out  NURA_handin_2.synctex(busy)  NURA_handin_2.tex  Q1_SatelliteGalaxy.py  Q1_satellites_derivative.py  Q1_satellites_sampling.py  Q1_satellites_selection.py  run.sh  (+1 more)
lecture_slides/: Question_hour_notes.txt
tutorial_1/: assignment_2.py  assignment_3.py
tutorial_1_and_2/: assignment_1.py  assignment_3.py
tutorial_2/: assignment_1.py
tutorial_3/: assignment_1.py  assignment_2.py
tutorial_4/: assignment_1.py  test.py
tutorial_5/: assignment_1.py  assignment_2.py
tutorial_6/: assignment_1.py  assignment_2.py
tutorial_7/: assignment_1.py
tutorial_8/: assignment_1.py  assignment_2.py
tutorial_9/: assignment_1.py  dataset1.txt  dataset2.txt  dataset3.txt  dataset4.txt  dataset5.txt
(+40 files in other folders)
