[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.ruff]
# match black
line-length = 200
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "EXE", # flake8-executable
    "TID", # flake8-tidy-imports

    #### specific rules
    "B008",   # allow for parameter class creation in init
    "D100",   # ignore missing docs
    "D101",
    "D102",   # docstring for public methods
    "D103",
    "D104",   # docstring in public package
    "D105",
    "D107",
    "D205",
    "D400",
    "D401",
    "D404",
    "D413",
    "D415",
    "D417",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "FIX002", # too verbose descriptions of todos
    "N802",
    "N803",
    "PT009",
    "TC001",
    "TC002",
    "TC003",
    "T201", # Allow prints

    "FBT001", # boolean typed parameters in function definitions
    "FBT002",

    "C901", # Function to complex

    # error messages
    "EM101",
    "EM102",
    "G004",
    "TRY400",

    # lamda
    "E731",

    # Allow uppercase variables
    "N806",

     
    "RUF009",  # no methodcalls in dataclass constructor

    # coments about TODO's
    "FIX001",
    "TD001",
    "TD002",
    "TD003",
    "TD004",

    # using ABC to define empty interfaces
    "B024",

    # ignore type override
    "PGH003",

    # comparison
    "PLR2004",

    # method signature
    "PLR0911",

    # setup.py
    "DTZ005",

    # casting
    "TC006",
]